--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "autoprefixer": "^10.4.20",
@@ -24,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.2",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.2",
