--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "autoprefixer": "^10.4.20",
+    "date-fns": "^4.1.0",
     "firebase": "^10.13.1",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
@@ -29,6 +30,7 @@
     "react-router-dom": "^6.26.2",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.12"
