--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "firebase": "^10.13.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
