--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
