--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^10.13.1",
     "framer-motion": "^11.11.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.441.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
